Fix overflow styling

--- a/src/pages/breeding/breeding.scss
+++ b/src/pages/breeding/breeding.scss
@@ -4,7 +4,6 @@
 .container {
     display: flex;
     flex-direction: column;
-    padding: 0px 16px;
     align-items: center;
     background-color: $main;
     width: 100%;
