--- a/static/index.scss
+++ b/static/index.scss
@@ -7,7 +7,6 @@ html, body {
     height: 100%;
     width: 100%;
     font-family: "Dosis", sans-serif;
-    overflow-y: overlay;
 }
 
 @font-face {
